syntax = "proto3";

package chat_server_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/AndreiMartynenko/chat-server/grpc/pkg/chat_server_v1;chat_server_v1";

service ChatAPIServicesV1 {
    rpc Create (CreateNewChatRequest) returns (CreateNewChatResponse);
    rpc Delete (DeleteChatRequest) returns (google.protobuf.Empty);
    rpc SendMessage (SendMessageRequest) returns (google.protobuf.Empty);
}

message CreateNewChatRequest {
    repeated string usernames = 1;
}

message CreateNewChatResponse {
    int64 id = 1;
}

message DeleteChatRequest {
    int64 id = 1;
}

message DeleteChatResponse {
  google.protobuf.Empty delete_response = 1;
}

message SendMessageRequest {
    int64 chatId = 1;
    string from = 2;
    string text = 3;
    google.protobuf.Timestamp timestamp = 4;

}

